# CustomLanguageInterpreter

./: .gitignore  CMakeLists.txt  README.md
Interpreter/: CMakeLists.txt
Interpreter/include/: ast.hpp  constants.hpp  keywords.hpp  lexer.hpp  parser.hpp  types.hpp  utils.hpp
Interpreter/include/ast/: bloc_statements.hpp  core_statements.hpp  literal_expressions.hpp  logic_expressions.hpp  types.hpp
Interpreter/include/runtime/: environment.hpp  functions.hpp  interpreter.hpp  types.hpp  utils.hpp
Interpreter/include/runtime/exceptions/: return_exception.hpp
Interpreter/include/runtime/functions/: core.hpp  io.hpp  math.hpp
Interpreter/src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp  utils.cpp
Interpreter/src/runtime/: environment.cpp  functions.cpp  interpreter.cpp
Interpreter/src/runtime/functions/: CMakeLists.txt  core.cpp  io.cpp  math.cpp
docs/: NativeFunctions.md  Syntax.md
tests/: comments.fl  function_declaration.fl  function_recursivity.fl  hello_world.fl  if_conditional.fl  logic_expression.fl  read_test.fl  test1.txt
